# 2026-06-13-anthropic-build-day

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
docs/: 00-concept-and-thesis.md  01-prototype-scope.md  02-architecture.md  03-implementation-plan.md  04-demo-scenario.md  05-evaluation-and-optimization.md  06-rfc.md  07-harness-generation-and-tool-research.md  08-synthetic-world-and-agent-topology.md  09-refund-worked-example.md  10-rfc-v2.md  11-bash-agent-design.md  12-synthetic-tool-agent-design.md  13-implemented-status.md
py/dspy_optimizer/: README.md  __init__.py  harness_program.py  harness_program_loan.py  metric.py  metric_loan.py  optimize.py  optimize_loan.py  pyproject.toml  requirements.txt
scripts/: evaluate-loan.test.ts  evaluate-loan.ts  evaluate.ts  gateway-server.ts  optimize-loan.ts  optimize.ts  poke-tool.ts  research.ts  shell.ts  sweep-bash.ts  sweep-live.ts  sweep-sandbox.ts  sweep.ts
src/engine/: index.ts  judge.ts  loan-judge.test.ts  loan-judge.ts  loan-llm-judge-live.ts  loan-terminal-decision.ts  terminal-decision.ts
src/harness/: cx-scorer-seam.ts  function-tools.test.ts  function-tools.ts  generator.test.ts  generator.ts  index.ts  live-harness.test.ts  live-harness.ts  structured-spec.ts
src/optimizer/: index.ts  llm-proposer.ts  optimize.test.ts  optimize.ts  proposer.ts
src/research/: generate-from-bundle.test.ts  generate-from-bundle.ts  hash.ts  index.ts  initialize-world.ts  pipeline.ts  reproduce.ts  research.test.ts  seam.ts  stages.ts  (+1 more)
(+79 files in other folders)
